--- a/index.html
+++ b/index.html
@@ -1,41 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+ <meta charset="UTF-8">
+ <title>BarCode Scanner - PhoneGapPro.com</title>
+ <script type="text/javascript" src="cordova.js"></script>
+ <script type="text/javascript">
+ function scan(){
+ console.log("clicked");
+ cordova.plugins.barcodeScanner.scan(function(result){
+ //success callback
+ alert(JSON.stringify(result));
 
-	<title>.:: 75% ::.</title>
-	
-	<script type="text/javascript" src="cordova.js"></script>
-	<!-- Bootstrap Core CSS -->
-	<link href="librerias/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+ },function(error){
+ //error callback
+ alert(JSON.stringify(error));
 
-	<!-- Custom CSS -->
-	<link rel="stylesheet/less" type="text/css" href="css/style.less" />
-	
-	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-	<![endif]-->
-	<link rel="stylesheet" href="librerias/awesome/css/font-awesome.min.css" />
+ });
+ }
+ </script>
 </head>
-
 <body>
-	<div id="menu"></div>
-	<div id="modulo"></div>
-	
-	<!-- jQuery -->
-	<script src="librerias/jquery.js"></script>
-	
-	<!-- Bootstrap Core JavaScript -->
-	<script src="librerias/bootstrap/js/bootstrap.min.js"></script>
-	
-	<!-- Otras librerias -->
-	<script src="librerias/less.min.js" type="text/javascript"></script>
-    <script src="js/index.js"></script>
+ <h3>BAR CODE SCANNER</h3>
+ <button onclick="scan()">SCAN</button>
 </body>
-
 </html>
