--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
  <script type="text/javascript" src="cordova.js"></script>
  <script type="text/javascript">
  function scan(){
- console.log("clicked");
  cordova.plugins.barcodeScanner.scan(function(result){
  //success callback
- alert(JSON.stringify(result));
+ 	result  = JSON.stringify(result)
+ 	$("#dvCodigo").html(result.text + " el formáto del código es " + result.format);
 
  },function(error){
  //error callback
@@ -20,7 +20,9 @@
  </script>
 </head>
 <body>
- <h3>BAR CODE SCANNER</h3>
- <button onclick="scan()">SCAN</button>
+ <h3>Prueba de scaner</h3>
+ <button onclick="scan()">Scarnear producto</button>
+ 
+ <div id="dvCódigo"></div>
 </body>
 </html>
