--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </head>
 <body>
  <h3>Prueba de scaner</h3>
- <button onclick="scan()">Scarnear producto</button>
+ <button onclick="scan()" class="btn btn-info">Scarnear producto</button>
  
- <div id="dvCódigo"></div>
+ <div class="alert alert-success" id="dvCódigo"></div>
 </body>
 </html>
