--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  function scan(){
  cordova.plugins.barcodeScanner.scan(function(result){
  //success callback
- 	result = $.parseJSON(result);
+	 alert(JSON.stringify(result));
  	$("#dvCodigo").html(result.text + " el formáto del código es " + result.format);
 
  },function(error){
@@ -21,8 +21,8 @@
 </head>
 <body>
  <h3>Prueba de scaner</h3>
- <button onclick="scan()" class="btn btn-info">Scanear producto</button>
+ <button onclick="scan()">Scarnear producto</button>
  
- <div class="alert alert-success" id="dvCódigo"></div>
+ <div id="dvCódigo"></div>
 </body>
 </html>
