Para hacer una llamada

--- a/index.html
+++ b/index.html
@@ -24,5 +24,10 @@
  <button onclick="scan()">Scarnear producto</button>
  
  <div id="dvCódigo"></div>
+ 
+ 
+ <script type="text/javascript">
+ 	window.open('tel:9515115837', '_system');
+ </script>
 </body>
 </html>
