--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  
  
  <script type="text/javascript">
- 	try{
+ /*	try{
 	 	phonedialer.dial("9515115837", function(err){
 	 		if (err == "empty") alert("Número desconocido");
 	 		else alert("Dialer error: " + err);
@@ -36,7 +36,7 @@
 	 	});
 	}catch(err) {
 		alert(err);
-	}
+	}*/
  </script>
 </body>
 </html>
