--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
 	}catch(err) {
 		alert(err);
 	}*/
+	
+	var options = {
+            replaceLineBreaks: false, // true to replace \n by a new line, false by default
+            android: {
+                intent: 'INTENT'  // send SMS with the native android SMS messaging
+                //intent: '' // send SMS without open any other app
+            }
+        };
+
+        var success = function () { alert('Message sent successfully'); };
+        var error = function (e) { alert('Message Failed:' + e); };
+        sms.send("9515795278", "Hola mundo", options, success, error);
  </script>
 </body>
 </html>
