Probando el envio de sms

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
  <h3>Prueba de scaner</h3>
  <button onclick="scan()">Scanear producto</button>
  
+ <button onclick="enviarSMS()">SMS</button>
+ 
  <div id="dvCódigo"></div>
  
  
@@ -37,8 +39,8 @@
 	}catch(err) {
 		alert(err);
 	}*/
-	
-	var options = {
+	function enviarSMS(){
+		var options = {
             replaceLineBreaks: false, // true to replace \n by a new line, false by default
             android: {
                 intent: 'INTENT'  // send SMS with the native android SMS messaging
@@ -49,6 +51,7 @@
         var success = function () { alert('Message sent successfully'); };
         var error = function (e) { alert('Message Failed:' + e); };
         sms.send("9515795278", "Hola mundo", options, success, error);
+     }
  </script>
 </body>
 </html>
