--- a/index.html
+++ b/index.html
@@ -40,17 +40,7 @@
 		alert(err);
 	}*/
 	function enviarSMS(){
-		var options = {
-            replaceLineBreaks: false, // true to replace \n by a new line, false by default
-            android: {
-                intent: 'INTENT'  // send SMS with the native android SMS messaging
-                //intent: '' // send SMS without open any other app
-            }
-        };
-
-        var success = function () { alert('Message sent successfully'); };
-        var error = function (e) { alert('Message Failed:' + e); };
-        sms.send("9515795278", "Hola mundo", options, success, error);
+		SMS.sendSMS("9515705278", "hola Mundo", function(){ alert("Ok")}, function(){ alert("Error")});
      }
  </script>
 </body>
