--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 		<script src="librerias/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 		
 		<script type="text/javascript" src="js/index.js"></script>
+		
+		<video width="100%" height="100%" controls>
+			<source src="http://209.208.97.249/radio/live/index.m3u8" type="application/x-mpegURL">
+		</video>
 	</body>
 </html>
